assets/css/style.css
/*Imported Fonts*/
@import url('https://fonts.googleapis.com/css2?family=Oregano:ital@0;1&family=Raleway:ital,wght@0,300;0,600;1,300;1,600&family=Taviraj:ital,wght@0,300;0,400;0,800;1,300;1,400;1,800&display=swap');

/*Asterisk Element*/
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body  {
    background-color: #233142;
    color: #FACF5A;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /*General Font*/
    font-family: 'Raleway', sans-serif;
}

/*Header Element*/
header  {
    background-color: #19282F;
    color: #FF5956;
    padding: 0 1rem;
    position: fixed;
    z-index: 98;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

h1  {
    font-family: 'Taviraj', serif;
    /* adjusts font-size for chosen font */
    font-size: 24px;
}

header a  {
    text-align: center;
    text-decoration: none;
    color: inherit;
}

nav {
    position: absolute;
    z-index: 99;
    background-color: #19282F;
    color: #FACF5A;
    width: 100%;
    left: 0;
    display: none;
    top: 100%;
}

#menu {
    font-size: 110%;
    letter-spacing: 4px;
    list-style-type: none;
    text-align: center;
}

#menu li  {
    border: 1.5px solid #3a3a3a;
    padding: 5px 0;
}

/* emphasises the active website in menu */

.active  {
    color: #FF5956;
    font-weight: bold;
}

/* nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-label {
    font-size: 2rem;
}
/*Main Content*/
main  {
    min-height: 100vh;
    margin-top: 40px;
}

#landscape  {
    height: 640px;
    width: 100%;
    background: url("../images/torii_1920.jpg") no-repeat center center/cover;
}

#cover-text  {
    background-color: rgba(25, 40, 47, 0.6);
    font-family: 'Taviraj',serif;
    font-size: 120%;
    position: absolute;
    bottom: 35px;
    text-align: center;
}

/* About Page */
#ronin {
    height: 640px;
    width: 100%;
    background: url("../images/ronin_640.jpg") no-repeat center center/cover;
}

#cover-text-a {
    background-color: rgba(25, 40, 47, 0.6);
    font-family: 'Taviraj', serif;
    font-size: 120%;
    /*Note: Flex-box does not apply - display:block element cannot be overwritten */
    position: absolute;
    top: 95px;
    text-align: center;
    justify-content: center;
}

#m_techniques img {
    width: 100vw; /* id over class selector */
}

/* Services Page */
#fox  {
    height: 640px;
    width: 100%;
    background: url("../images/fox_640.jpg") no-repeat center center/cover;
}

#services img {
    width: 100vw; /* id over class selector */
}

/* Request (Build a Gate) Page */
#mountain {
    height: 653px;
    width: 100%;
    background: url("../images/mountain_portable.png") no-repeat center center/cover;
    margin-bottom: 125px;
    padding: 20px 10% 0 10%;
    flex: 1 0 auto;
}

#user_request  {
    background-color: rgba(25, 40, 47, 0.6);
    padding: 20px;    
}

.text-line  {
    background: transparent;
    border: 1px inset #FACF5A;
    border-radius: 2px;
    width: 100%;
    padding: 0 5px;
    margin: 5px 0 20px 0;
}

.form-button  {
    margin-top: 30px;
    border-radius: 2px;
    padding: 15px 3px;
    color: #FF5956;
    background-color: #19282F;
}

/*Footer*/
footer  {
    background-color: #19282F;
    font-family: 'Taviraj', sans-serif;
}

#social-media {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-media i  {
    font-size: 200%;
    padding: 5%
}

/* Media query - Ordered from lowest to highest device width */

@media screen and (min-width: 768px)  {
    nav  {
        display: block;
        position: relative;
        width: fit-content;
        padding-right: 10px;
    }


    #menu {
    display: flex;
    }

    #menu > li {
    padding: 0 5px;
    }

    /*Removal of Menu checkbox on larger screens*/
    .nav-label  {
    display: none;
    }
    
    /*Services Webpage*/
    #guidance, #creativity, #training  {
        display: flex;
        flex-wrap: wrap;
    }

    #guidance div, #creativity div,
        #training div {
        width: 50%;
        flex-wrap: wrap;
    }

    #services img  {
        width: 50vw;  /* vw instead of percent as it does adapt to the screen */
        border: 5px inset #FACF5A;
        padding: 20px;
    }

    .explanation-box  {
        padding: 10px 0 0 2vw;
    }
}

/* Media Query for laptop or larger devices */

@media screen and (min-width: 768px) {
    #menu a:hover  {
        color: #FF5956;
    }

    
}

